HandEval/logs-3/20250805_084128_medusa_medusa-vicuna-33b-v1.3_T0.7_P0.9_test.py.log
Traceback (most recent call last):
  File "/home/ubuntu/sd/HandEval/test.py", line 223, in <module>
    ModelClass = get_model_class(_args.model)
  File "/home/ubuntu/sd/HandEval/models/__init__.py", line 14, in get_model_class
    import_module(f"models.{name}_wrapper")
  File "/home/ubuntu/miniconda3/envs/sd/lib/python3.10/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
  File "<frozen importlib._bootstrap>", line 1050, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1027, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1006, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 688, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 879, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1017, in get_code
  File "<frozen importlib._bootstrap_external>", line 947, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/ubuntu/sd/HandEval/models/medusa_wrapper.py", line 52
    if temperature = = 0.0:
                   ^
SyntaxError: invalid syntax
